2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_load_file): Function declared static.
	* info/info.c (main): Call info_find_file instead.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (all_files, main): all_files merged into main.
	(add_initial_nodes): Store full path of initial
	nodes instead of plain file name.
	(info_find_matching_files): Return type changed.

	* info/session.c (begin_multiple_window_info_session): Don't call
	initialize_info_session or display a welcome message.  Caller in
	main updated.

	* info/info.c (dirname): Delete unused.
	* info/session.c (dump_node_to_file): Delete unused.

2014-05-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infodoc.c (info_get_info_help_node): Don't split window
	to display Info tutorial.
	* info/session.c (begin_multiple_window_info_session): Unused
	variable removed.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (select_menu_digit): Return null if no menu.
	(info_menu_digit): Check if references field of node is null.
	(info_menu_or_ref_item): Abort if no references.
	(info_menu_item): Print error message if no references.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (initialize_terminal_and_keymaps): Don't quit if
	terminal is dumb, because we might not be running interactively.
	(initialize_info_session): Quit if terminal is dumb.
	* info/terminal.c (terminal_initialize_terminal): Comment corrected.
	(terminal_prep_terminal): Return 0 for a dumb terminal.

	* info/t/Init-test.inc: Run tests with TERM=dumb by default.
	* info/t/Init-intera.inc: Run interactive tests with TERM=vt100.
	Suggested by Karl Berry.

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_node_contents): Pass offset relative to
	start of node contents of "*" starting reference to
	scan_reference_label.  Report by Benno Schulenberg 8th May, 2014. 

2014-05-08  Gavin Smith  <gavinsmith0123@gmail.com>
